--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,14 +27,14 @@ dist.jar=${dist.dir}/autoworld.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.commons-collections-3.2.1.jar=C:\\javalib\\commons-collections-3.2.1\\commons-collections-3.2.1.jar
-file.reference.commons-lang3-3.1.jar=C:\\javalib\\commons-lang3-3.1\\commons-lang3-3.1.jar
+file.reference.autoworld_apache_commons.zip=H:\\Cursus materiaal\\JAVA\\JPF\\autoworld_apache_commons.zip
+file.reference.commons-lang3-3.3.2-bin.zip=H:\\Cursus materiaal\\JAVA\\JPF\\commons-lang3-3.3.2-bin.zip
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.commons-collections-3.2.1.jar}:\
-    ${file.reference.commons-lang3-3.1.jar}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${file.reference.commons-lang3-3.3.2-bin.zip}:\
+    ${file.reference.autoworld_apache_commons.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -44,7 +44,8 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -54,8 +55,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.commons-collections-3.2.1.jar=C:\\javalib\\commons-collections-3.2.1\\commons-collections-3.2.1-javadoc.jar
-javadoc.reference.commons-lang3-3.1.jar=C:\\javalib\\commons-lang3-3.1\\commons-lang3-3.1-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -74,9 +73,8 @@ run.classpath=\
 run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${libs.junit_4.classpath}
 source.encoding=UTF-8
-source.reference.commons-collections-3.2.1.jar=C:\\javalib\\commons-collections-3.2.1\\commons-collections-3.2.1-sources.jar
-source.reference.commons-lang3-3.1.jar=C:\\javalib\\commons-lang3-3.1\\commons-lang3-3.1-sources.jar
 src.dir=src
 test.src.dir=test
