--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,14 +27,14 @@ dist.jar=${dist.dir}/autoworld.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.autoworld_apache_commons.zip=H:\\Cursus materiaal\\JAVA\\JPF\\autoworld_apache_commons.zip
-file.reference.commons-lang3-3.3.2-bin.zip=H:\\Cursus materiaal\\JAVA\\JPF\\commons-lang3-3.3.2-bin.zip
+file.reference.commons-collections-3.2.1.jar=commons-collections-3.2.1.jar
+file.reference.commons-lang3-3.3.2.jar=commons-lang3-3.3.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.junit_4.classpath}:\
-    ${file.reference.commons-lang3-3.3.2-bin.zip}:\
-    ${file.reference.autoworld_apache_commons.zip}
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-lang3-3.3.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=be.vdab.be.main.Programma
+main.class=be.vdab.voertuigen.main.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
